// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Construct "LambdaNodejs" by default Snapshot 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7ArtifactHashA2855EC6": Object {
      "Description": "Artifact hash for asset \\"4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7\\"",
      "Type": "String",
    },
    "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7S3Bucket1946552D": Object {
      "Description": "S3 bucket for asset \\"4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7\\"",
      "Type": "String",
    },
    "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7S3VersionKeyA13E0720": Object {
      "Description": "S3 key for asset version \\"4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "MyTestConstructFunction4795DE86": Object {
      "DependsOn": Array [
        "MyTestConstructFunctionServiceRole786CED66",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7S3Bucket1946552D",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7S3VersionKeyA13E0720",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters4b7b725fb32b7e3c3a434db632c41812742b5fe3bbba92a400497764a9b174c7S3VersionKeyA13E0720",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "MyTestConstructFunctionServiceRole786CED66",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "MyTestConstructFunctionServiceRole786CED66": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Test Construct "LambdaNodejs" by option {"func":{"entry":"./lambda/test/index.ts","handler":"handler"},"role":{"description":"for MyAwsCdkLibLambdaNodejsTest2Stack","managedPolicies":["service-role/AWSLambdaBasicExecutionRole","AmazonS3ReadOnlyAccess"]},"version":{"removalPolicy":"retain"}} Snapshot 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffArtifactHash6BE44837": Object {
      "Description": "Artifact hash for asset \\"23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ff\\"",
      "Type": "String",
    },
    "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffS3Bucket797C5718": Object {
      "Description": "S3 bucket for asset \\"23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ff\\"",
      "Type": "String",
    },
    "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffS3VersionKey568F954E": Object {
      "Description": "S3 key for asset version \\"23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ff\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "MyTestConstructFunction4795DE86": Object {
      "DependsOn": Array [
        "MyTestConstructRole16E7E65D",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffS3Bucket797C5718",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffS3VersionKey568F954E",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters23409060fae67c3d17b252ca4488da2090e3062e71f107f198a424e18704f9ffS3VersionKey568F954E",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "MyTestConstructRole16E7E65D",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "MyTestConstructRole16E7E65D": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "for MyAwsCdkLibLambdaNodejsTest2Stack",
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AmazonS3ReadOnlyAccess",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "MyTestConstructVersion4b4f2133c15e419ba344b8c5d9f61d919b29c38b7ba7bcd61e4bc01163d0f53dD881883A": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "FunctionName": Object {
          "Ref": "MyTestConstructFunction4795DE86",
        },
      },
      "Type": "AWS::Lambda::Version",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
